objects/CCMS_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_DB_Id__c</fullName>
        <externalId>true</externalId>
        <label>CCMS DB Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCMS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Product</label>
        <referenceTo>CCMS_Product__c</referenceTo>
        <relationshipName>CCMS_VERSIONS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CCMS Version</label>
    <nameField>
        <label>CCMS Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCMS Versions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>